testsuite/tests/dependent/should_fail/all.T
test('DepFail1', normal, compile_fail, [''])

